fix front bugs
- remove alert from asmc.asean.org redirect
- fix overlapping zone on #urlTitleCont
- use the minified Openlayers

--- a/openwis-metadataportal/openwis-portal/src/main/webapp/css/openwis-custom-user.css
+++ b/openwis-metadataportal/openwis-portal/src/main/webapp/css/openwis-custom-user.css
@@ -645,7 +645,7 @@
  }
 
  #urlTitleCont {
-     height: 360px;
+     height: 330px;
  }
 
  .SearchPage #urlTitleCont {
